--- a/src/containers/Profile.css
+++ b/src/containers/Profile.css
@@ -13,6 +13,7 @@
   }
 
   h2 {
+    overflow-wrap: break-word;
     font-family: Montserrat;
     font-weight: 400;
     font-size: 1.5em;
